2002-12-10  Alexander V. Lukyanov <lav@yars.free.net>

	* FindJob.cc: handle ~ directories properly.
	* Fish.cc: fix rename.
	* resource.cc: make verify-certificate off by default.

2002-10-23  Alexander V. Lukyanov <lav@yars.free.net>

	* Speedometer.cc: fixed wrong eta calculation (reported by Haas
	  Wernfried <w.haas@xover.htu.tuwien.ac.at>).

2002-10-23  Glenn Maynard <g_ld@zewt.org>

	* OutputJob.cc: fix abort when output file is not writable.

2002-10-11  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: change state to WAITING_STATE from
	  DATASOCKET_CONNECTING_STATE properly on DataClose().
	* Fish.cc: (StoreStatus) check state; send a different store
	  command when entity_size==0 to avoid dd bug.

2002-09-30  Glenn Maynard <g_ld@zewt.org>

	* misc.cc: unset put_tz properly on set_tz(0).

2002-09-30  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.cc: call tzset for glibc.

2002-09-26  Albert Chin <lftp-devel@thewrittenword.com>

	* FileAccess.cc: fix const mismatch (found with HP C++).

2002-09-23  Alexander V. Lukyanov <lav@yars.free.net>

	* keyvalue.h: make Pair public.
	* FileCopy.cc: don't report percent if pos>size.

2002-09-09  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.cc: save readline history conditionally.

2002-09-05  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: allow single LF as EOL (suggested by Peter Vreman
	  <peter@freepascal.org>). Also recommended by RFC2616.

2002-09-04  Alexander V. Lukyanov <lav@yars.free.net>

	* IdNameCache.cc, IdNameCache.h: fixed a bug which caused a single
	  object to be put on two lists (rare); fixed a memory leak.
	  Reported by Tillmann Steinbrecher <tillmann.steinbrecher@anandtech.com>.

2002-09-03  Alexander V. Lukyanov <lav@yars.free.net>

	* Filter.cc: handle ENOSPC and EDQUOT specially when the file is
	  removed (nlink==0).
	* lftp.cc, lftp_rl.c, lftp_rl.h: read/write readline history.

2002-09-02  Glenn Maynard <g_ld@zewt.org>
